<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/database"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/firebase"
        app:layout_constraintBottom_toTopOf="@+id/moodTracker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather" />

    <Button
        android:id="@+id/about"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="5dp"
        android:text="ABOUT"
        app:layout_constraintBottom_toTopOf="@+id/weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/moodTracker"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:text="@string/mood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/database" />

    <Button
        android:id="@+id/weather"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:text="@string/weather"
        app:layout_constraintBottom_toTopOf="@+id/database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about" />


</androidx.constraintlayout.widget.ConstraintLayout>