<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/receivedEmojis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Emojis_string"
        android:minWidth="50dp"
        app:layout_constraintBottom_toTopOf="@id/receivedRecordsRV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fromUser"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/fromUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/from_user_string"
        android:minWidth="6dp"
        app:layout_constraintBottom_toTopOf="@id/receivedRecordsRV"
        app:layout_constraintStart_toEndOf="@id/receivedEmojis"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/send_time_string"
        app:layout_constraintBottom_toTopOf="@id/receivedRecordsRV"
        app:layout_constraintStart_toEndOf="@id/fromUser"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/receivedRecordsRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receivedEmojis" />

</androidx.constraintlayout.widget.ConstraintLayout>